Wed Aug 15 14:28:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Notify/lib/Options_Parser.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Consumer.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier_Client.cpp:

          Correct types, removes C++11 warning about {} initalization miss-match.

Wed Aug 15 10:08:20 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tao/IIOP_Connector.cpp:

          Correct types for time, removes C++11 warning.

Wed Aug 15 08:44:07 UTC 2012  Olli Savia  <ops@iki.fi>

        * docs/tutorials/Quoter/RTCORBA/StockQuoter.mpc:
          This project needs threads.

Tue Aug 14 11:08:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport_Recv_Packet.h:

          Move #pragma once below header that sets ACE_LACKS_PRAGMA_ONCE.

Tue Aug 14 11:00:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Miop/McastZIOP/client.cpp:

          Add .in() to var use to stop warning on lyxos.

Tue Aug 14 08:41:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * NEWS:

          Advisory note added concerning the generic testability
          of the -ORBPreferredInterfaces feature.

        * orbsvcs/tests/Miop/McastPreferredInterfaces/run_test_ipv6.pl:
        * orbsvcs/tests/Miop/McastPreferredInterfaces/run_test.pl:

          Stop these tests from erroring due to possiable problems in
          loopback feature. This test is effectivly for information
          purposes.

Mon Aug 13 14:55:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
          And again (there were two of them)!

Mon Aug 13 14:44:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
          Major and Minor should be set output with debug message!
